sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:9: error: not found: value n
    n=getNombreValeurs
    ^AlgBubbleSort2:10: error: not found: value n
     for (i<- 0 to n-2){
                   ^